# minerva-rs

./: Cargo.toml  README.md
src/: database.rs  embedder.rs  genaigen.rs  global.rs  main.rs  minervadoc.rs  mistral.rs  ollamagen.rs  qmistral.rs  tant.rs  tantivy.rs  textgen.rs
