[package]
name = "minerva-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
fastembed = "3.5.0"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
oasysdb = "0.4.4"
pdf-extract = "0.7.6"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
text-splitter = "0.12.3"
tokenizers = "0.19.1"
