[package]
name = "minerva-rs"
version = "0.1.0"
edition = "2021"
authors = ["Peter Berck <peter.berck@humlab.lu.se>"]
description = "A simple RAG system."
repository  = "https://github.com/HumlabLu/minerva-rs"
readme      = "README.md"
license     = "GNU AGPLv3"
keywords    = [ "RAG" ]
categories  = [ "RAG" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
blake3 = "1.5.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
fastembed = "3.5.0"
genai = "0.1.2"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
oasysdb = "0.6.0"
once_cell = "1.19.0"
pdf-extract = "0.7.6"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tantivy = "0.22.0"
tempfile = "3.10.1"
text-splitter = "0.12.3"
tokenizers = "0.19.1"
tqdm = "0.7.0"
ulid = "1.1.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"]}
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"]}
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"]}
